--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/funding">Funding</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/eufunding">EU_Funding</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/uasat">UASAT</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>
 		
 	  </ul>
