--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/funding">Funding</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/eufunding">EU_Funding</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/uasat">UASAT</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/events">Events</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>
 		
 	  </ul>
