--- a/_includes/header.html
+++ b/_includes/header.html
@@ -104,7 +104,7 @@
 			  Events <span class="caret"></span>
 			</a>
 			<ul class="dropdown-menu">
-			  <li><a href="{{ site.url }}{{ site.baseurl }}/events/workshops">Workshops</a></li>
+			  <li><a href="{{ site.url }}{{ site.baseurl }}/events/workshops/Second_Workshop_on_Systems_and_Intelligence_for_UAV">Workshops</a></li>
 			  <li class="dropdown-submenu">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Master Trainer Program</a>
 				<ul class="dropdown-menu">
