--- a/_includes/header.html
+++ b/_includes/header.html
@@ -101,7 +101,7 @@
 		  <!-- Events Dropdown -->
 		  <li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-			  Events <span class="caret"></span>
+			  Past_Events <span class="caret"></span>
 			</a>
 			<ul class="dropdown-menu">
 			  <li><a href="{{ site.url }}{{ site.baseurl }}/events/workshops/Second_Workshop_on_Systems_and_Intelligence_for_UAV">Workshops</a></li>
@@ -115,6 +115,7 @@
 			  </li>
 			</ul>
 		  </li>
+		  <li><a href="{{ site.url }}{{ site.baseurl }}/Events">Events</a></li>
 		  <li><a href="{{ site.url }}{{ site.baseurl }}/gallery">(Gallery)</a></li>
 		</ul>
 	  </div>
