--- a/_includes/header.html
+++ b/_includes/header.html
@@ -61,7 +61,7 @@
 		  <li><a href="{{ site.url }}{{ site.baseurl }}/eufunding">EU_Funding</a></li>
 		  <li><a href="{{ site.url }}{{ site.baseurl }}/uasat">UASAT</a></li>
 		  <li><a href="{{ site.url }}{{ site.baseurl }}/events">Events</a></li>
-		  <li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Gallery)</a></li>
+		  <li><a href="{{ site.url }}{{ site.baseurl }}/pictures">Gallery</a></li>
 		</ul>
 	  </div>
 	</div>
@@ -115,7 +115,7 @@
 			  </li>
 			</ul>
 		  </li>
-		  <li><a href="{{ site.url }}{{ site.baseurl }}/gallery">(Gallery)</a></li>
+		  <li><a href="{{ site.url }}{{ site.baseurl }}/gallery">Gallery</a></li>
 		</ul>
 	  </div>
 	</div>
