--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,35 @@
 <br><br>
 <div id="footer" class="panel">
   <div class="panel-footer">
-	<div class="container-fluid">
-	  <div class="row">
-		<div class="col-sm-6">
-			
-		  <p>&copy 2021 Robotics Research Center, IIIT Hyderabad. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  
-              <p>Thanks to <a href="https://www.allanlab.org/">Allan Lab</a> for the theme!</p>
-            
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-6">
+          <p>&copy; 2021 Robotics Research Center, IIIT Hyderabad. Site made with <a href="https://jekyllrb.com">Jekyll</a>.</p>
+          <p>Thanks to <a href="https://www.allanlab.org/">Allan Lab</a> for the theme!</p>
+          <p>Stay connected with us:</p>
+          <p>
+            <!-- Official X Logo -->
+            <a href="https://x.com/rrclab_iiith" target="_blank" style="margin-right: 20px;">
+              <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="X (formerly Twitter)" width="36" height="36" style="vertical-align: middle;">
+            </a>
 
-		   <p>  </p><p>
-            		  
-            
-		</div>
+            <!-- Official YouTube Logo -->
+            <a href="https://www.youtube.com/@rrciiithyd" target="_blank">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube" width="36" height="36" style="vertical-align: middle;">
+            </a>
+          </p>
+        </div>
 
-		<div class="col-sm-6">
-		  Contact:<br />
-		  Robotics Research Center<br />
-		  International Institute of Information Technology (IIIT)<br />
-		  Gachibowli, Hyderabad 500032<br />
-		  Telangana, India <br />
-		  Phone : +91-40-2300 1967, 2300 1969 <br />
-            <!-- (<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>) -->
-		</div>
-	  </div>
-	</div>
+        <div class="col-sm-6">
+          Contact:<br />
+          Robotics Research Center<br />
+          International Institute of Information Technology (IIIT)<br />
+          Gachibowli, Hyderabad 500032<br />
+          Telangana, India <br />
+          Phone: +91-40-2300 1967, 2300 1969 <br />
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
