--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,16 +8,22 @@
           <p>Thanks to <a href="https://www.allanlab.org/">Allan Lab</a> for the theme!</p>
           <p>Stay connected with us:</p>
           <p>
-            <!-- Official X Logo -->
-            <a href="https://x.com/rrclab_iiith" target="_blank" style="margin-right: 20px;">
-              <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="X (formerly Twitter)" width="36" height="36" style="vertical-align: middle;">
-            </a>
+  <!-- Official X Logo -->
+  <a href="https://x.com/rrclab_iiith" target="_blank" style="margin-right: 20px;">
+    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="X (formerly Twitter)" width="36" height="36" style="vertical-align: middle;">
+  </a>
 
-            <!-- Official YouTube Logo -->
-            <a href="https://www.youtube.com/@rrciiithyd" target="_blank">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube" width="36" height="36" style="vertical-align: middle;">
-            </a>
-          </p>
+  <!-- Official YouTube Logo -->
+  <a href="https://www.youtube.com/@rrciiithyd" target="_blank" style="margin-right: 20px;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube" width="36" height="36" style="vertical-align: middle;">
+  </a>
+
+  <!-- Official LinkedIn Logo -->
+  <a href="https://www.linkedin.com/in/robotics-research-center-iiit-hyderabad-856b0b368/" target="_blank" style="margin-right: 20px;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" width="36" height="36" style="vertical-align: middle;">
+  </a>
+</p>
+
         </div>
 
         <div class="col-sm-6">
