--- a/css/main.scss
+++ b/css/main.scss
@@ -10,9 +10,23 @@ img { margin-bottom: 24px;
 
 
 body {
-	padding-top: 100px;
 	padding-bottom: 20px;
 }
+
+/* Mobile: More padding (collapsed menu takes space) */
+@media (max-width: 767px) {
+	body {
+		padding-top: 100px;
+	}
+}
+
+/* Desktop: Match actual navbar height */
+@media (min-width: 768px) {
+	body {
+		padding-top: 80px; /* Match .navbar min-height */
+	}
+}
+
 
 figcaption {
     text-align: right;
