--- a/css/main.scss
+++ b/css/main.scss
@@ -13,10 +13,10 @@ body {
 	padding-bottom: 20px;
 }
 
-/* DEsktop: More padding (collapsed menu takes space) */
+/* Desktop: More padding (collapsed menu takes space) */
 @media (max-width: 768px) {
 	body {
-		padding-top: 65px;
+		padding-top: 60px;
 	}
 }
 
