--- a/css/main.scss
+++ b/css/main.scss
@@ -1,190 +1,75 @@
----
----
-
-@import "bootstrap";
-
-img { margin-bottom: 24px; 
-     margin-top: 17px; 
-    border-radius:2%;
-}
-
-
-body {
-	padding-bottom: 20px;
-}
-
-/* Desktop: More padding (collapsed menu takes space) */
-@media (max-width: 768px) {
-	body {
-		padding-top: 40px;
-	}
-}
-
-/* Mobile: Match actual navbar height */
-@media (min-width: 767px) {
-	body {
-		padding-top: 75px; /* Match .navbar min-height */
-	}
-}
-
-
-figcaption {
-    text-align: right;
-    margin-top: -20px;
-    margin-bottom: 20px;
-}
-
-.publication {
-	margin-right: auto;
-  margin-left: auto;
-	max-width: 1100px;
-}
-
-/* Top navigation bar */
-
+/* Navbar fixes */
 .navbar {
-	min-height: 60px;
+    min-height: 60px;
 }
 
 .navbar-brand {
-	padding: 0 15px;
-	height: 60px;
-	line-height: 60px;
-	font-size: 18px;
+    padding: 0 15px;
+    height: 60px;
+    line-height: 60px;
+    font-size: 18px;
 }
 
 .navbar-toggle {
-	margin-top: 13px; /* (60px - 34px)/2 = 13 */
-	padding: 6px 8px !important;
+    margin-top: 13px;
+    padding: 6px 8px !important;
 }
-
 
 @media (min-width: 768px) {
-.navbar-nav > li > a {
-	/* (80px - line-height of 27px) / 2 = 26.5px */
-	padding-top: 26.5px;
-	padding-bottom: 26.5px;
-	line-height: 27px;
-}
-}
-
-p.byline {
-	text-align: center;
-	font-size: 18px;
-	line-height: 36px;
-	margin-top: -24px;
-	margin-bottom: 48px;
+    .navbar-nav > li > a {
+        padding-top: 18px; /* reduce padding to prevent wrapping */
+        padding-bottom: 18px;
+        line-height: 24px;
+    }
 }
 
-
-pubtit {
-	font-weight: bold;
-}
-
-firstp {
-}
-
-.container-fluid {
-  margin-right: auto;
-  margin-left: auto;
-  max-width: 1200px; /* or 950px */
-}
-
-/* Home, News */
-#newsid p {
-	text-align: left;
-}
-
-#homeidtmp h1 {
-	text-align: center;
-}
-
-#newsid img {
-	margin-top: 6px;
-	margin-bottom: 6px;
-}
-
-/* Team & Publications */
-#gridid img { margin: 16px 22px 6px 0; border-radius:10%; box-shadow: 2px 2px 5px #888888 }
-#homeid img { margin: 0 0 0 0; border-radius:5%; box-shadow: 0px 0px 0px #888888 }
-#picid img { margin: 6px 3px 60px 6px; border-radius:1%; box-shadow: 2px 2px 5px #888888 }
-#gridid .row { margin-bottom: 24px; }
-
-
-/* Grid overrides */
-.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-5, .col-sm-6,
-.col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-	padding-left: 16px;
-	padding-right: 16px;
-}
-
-/* Grid overrides - for project-page */
-.col-sm-13 {
-	padding-left: 50px;
-	padding-right: 50px;
-}
-
-
-/* Grid overrides */
-.col-sm-4 {
-	padding-left: 26px;
-	padding-right: 26px;
-}
-
-
-/* Carusel */
-
-.carousel {
-    border-radius: 3px 3px 3px 3px;
+/* Publications year filter */
+.pub-filter-container {
+    display: flex;
+    flex-wrap: wrap; /* ensures it wraps on smaller screens */
+    justify-content: flex-start;
+    align-items: center;
     margin-bottom: 20px;
-    margin-top: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
 }
 
-
-/* Custom */
-
-.pubscroll {
-	max-height: 500px; /* Change to your desired max height */
-	overflow-y: scroll;
-	overflow-x: scroll;
-	background-color: #fff;
-    background-color: rgba(255,255,255,0.5);
+.pub-filter-container select,
+.pub-filter-container label {
+    margin-right: 15px;
+    margin-bottom: 10px;
+    font-size: 14px;
 }
 
-// .eu-funding-logo {
-//     display: flex;
-//     justify-content: center;
-//   }
-
-// .eu-funding-logo img {
-// max-width: 100%;
-// }
-
-
-// .iras-hub-logo {
-//     // display: flex;
-// 	flex: 1;
-//     justify-content: center;
-//   }
-
-// .iras-hub-logo img {
-// max-width: 30%;
-
-// }
-
-.eu-header-row {
-	display: flex;
+/* Make the filter scrollable if too wide */
+.pub-filter-scroll {
+    overflow-x: auto;
+    width: 100%;
 }
 
-.col1 {
-	flex: 1;
-	padding: 10px;
-	// justify-content: center;
-  }
+/* Publication grid container */
+.publication {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1100px;
+    padding: 0 15px;
+}
 
-  .col1 img {
-	max-width: 50%;
-	// justify-content: center;
-	}
+/* Responsive fixes */
+@media (max-width: 991px) {
+    .navbar-nav > li > a {
+        padding-top: 14px;
+        padding-bottom: 14px;
+    }
+
+    .pub-filter-container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
+@media (max-width: 575px) {
+    .pub-filter-container select,
+    .pub-filter-container label {
+        width: 100%;
+        margin-right: 0;
+    }
+}
