--- a/_includes/header.html
+++ b/_includes/header.html
@@ -238,7 +238,7 @@
 
 /* Collapse background fix */
 .navbar-collapse {
-  background-color: #fff;
+  background-color: #000;
 }
 
 /* === Responsive Tweaks === */
