--- a/_includes/header.html
+++ b/_includes/header.html
@@ -152,10 +152,13 @@
 
 	/* === General Navbar Styling === */
 .navbar {
-  min-height: 60px;
-  border: none;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  background-color: #fff;
+  background-color: #000; /* or your preferred color */
+  width: 100%;
+  left: 0;
+  right: 0;
+}
+.navbar-nav.navbar-right {
+  margin-right: 15px;
 }
 
 .navbar-brand {
@@ -165,6 +168,7 @@
   line-height: 30px;
   padding: 15px;
   white-space: nowrap;
+  margin-left: 15px;
 }
 
 /* Navbar links */
@@ -180,6 +184,10 @@
 .navbar-nav > li.active > a {
   background-color: #f5f5f5;
   color: #000;
+}
+.navbar .container-fluid {
+  padding-left: 0;
+  padding-right: 0;
 }
 
 /* === Dropdowns === */
@@ -226,8 +234,8 @@
 
 /* === Mobile Navbar Fixes === */
 .navbar-toggle {
-  margin-top: 14px;
-  margin-bottom: 14px;
+  margin-top: 7px;
+  margin-bottom: 7px;
   border: none;
   background: none;
 }
@@ -240,6 +248,14 @@
 .navbar-collapse {
   background-color: #000;
 }
+@media (max-width: 767px) {
+  .dropdown-menu {
+    width: 100%;
+    border: none;
+    box-shadow: none;
+  }
+}
+
 
 /* === Responsive Tweaks === */
 @media (max-width: 991px) {
@@ -256,6 +272,14 @@
     box-shadow: none;
     border: none;
   }
+
+@media (min-width: 1600px) {
+  .navbar-nav > li > a {
+    font-size: 18px;
+    padding: 20px 25px;
+  }
+}
+
 
   .dropdown-submenu > .dropdown-menu {
     margin-left: 0;
