--- a/_includes/header.html
+++ b/_includes/header.html
@@ -97,7 +97,7 @@
 		  </li>
 		  <li><a href="{{ site.url }}{{ site.baseurl }}/funding">Funding</a></li>
 		  <li><a href="{{ site.url }}{{ site.baseurl }}/eufunding">EU_Funding</a></li>
-		  <li><a href="{{ site.url }}{{ site.baseurl }}/uasat">UASAT</a></li>
+		  <!--li><a href="{{ site.url }}{{ site.baseurl }}/uasat">UASAT</a></li-->
 		  <!-- Events Dropdown -->
 		  <li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
