--- a/_includes/header.html
+++ b/_includes/header.html
@@ -100,45 +100,59 @@
 		  <!--li><a href="{{ site.url }}{{ site.baseurl }}/uasat">UASAT</a></li-->
 		  <!-- Events Dropdown -->
 		  <!-- Past Events Dropdown -->
+<!-- UASAT Main Dropdown -->
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-    Past_Events <span class="caret"></span>
+  <a href="{{ site.url }}{{ site.baseurl }}/uasat"
+     class="dropdown-toggle"
+     data-toggle="dropdown"
+     role="button"
+     aria-haspopup="true"
+     aria-expanded="false">
+    UASAT <span class="caret"></span>
   </a>
 
   <ul class="dropdown-menu">
 
-    <!-- Workshops Submenu -->
+    <!-- Past Events -->
     <li class="dropdown-submenu">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Workshops</a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+        Past Events
+      </a>
+
       <ul class="dropdown-menu">
-        <li>
-          <a href="{{ site.url }}{{ site.baseurl }}/uasat">
-            UASAT
+
+        <!-- Master Trainer Program -->
+        <li class="dropdown-submenu">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            Master Trainer Program
           </a>
+          <ul class="dropdown-menu">
+            <li><a href="{{ site.url }}{{ site.baseurl }}/events/mtp/1">1st MTP</a></li>
+            <li><a href="{{ site.url }}{{ site.baseurl }}/events/mtp/2">2nd MTP</a></li>
+            <li><a href="{{ site.url }}{{ site.baseurl }}/events/mtp/3">3rd MTP</a></li>
+            <li><a href="{{ site.url }}{{ site.baseurl }}/events/mtp/4">4th MTP</a></li>
+          </ul>
         </li>
 
-        <li>
-          <a href="{{ site.url }}{{ site.baseurl }}/events/workshops/National_Workshop_Systems_and_Intelligence_for_UAV_2023">
-            National Workshop on Systems and Intelligence for UAV (Nov 2023)
+        <!-- Workshops -->
+        <li class="dropdown-submenu">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            Workshops
           </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a href="{{ site.url }}{{ site.baseurl }}/events/workshops/National_Workshop_Systems_and_Intelligence_for_UAV_2023">
+                National Workshop on Systems and Intelligence for UAV (Nov 2023)
+              </a>
+            </li>
+            <li>
+              <a href="{{ site.url }}{{ site.baseurl }}/events/workshops/Second_Workshop_on_Systems_and_Intelligence_for_UAV">
+                Second Workshop on Systems and Intelligence for UAV (Dec 2024)
+              </a>
+            </li>
+          </ul>
         </li>
 
-        <li>
-          <a href="{{ site.url }}{{ site.baseurl }}/events/workshops/Second_Workshop_on_Systems_and_Intelligence_for_UAV">
-            Second Workshop on Systems and Intelligence for UAV (Dec 2024)
-          </a>
-        </li>
-      </ul>
-    </li>
-
-    <!-- Master Trainer Program Submenu -->
-    <li class="dropdown-submenu">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Master Trainer Program</a>
-      <ul class="dropdown-menu">
-        <li><a href="{{ site.url }}{{ site.baseurl }}/events/mtp/1">1st MTP</a></li>
-        <li><a href="{{ site.url }}{{ site.baseurl }}/events/mtp/2">2nd MTP</a></li>
-        <li><a href="{{ site.url }}{{ site.baseurl }}/events/mtp/3">3rd MTP</a></li>
-        <li><a href="{{ site.url }}{{ site.baseurl }}/events/mtp/4">4th MTP</a></li>
       </ul>
     </li>
 
