Update gallery link text in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -160,7 +160,7 @@
 </li>
 
 		  <li><a href="{{ site.url }}{{ site.baseurl }}/Events">Events</a></li>
-		  <li><a href="{{ site.url }}{{ site.baseurl }}/gallery">(Gallery)</a></li>
+		  <li><a href="{{ site.url }}{{ site.baseurl }}/gallery">Gallery</a></li>
 		</ul>
 	  </div>
 	</div>
