--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,72 +1,3 @@
-<!-- <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="container-fluid">
-	<div class="navbar-header">
-	  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
-		<span class="sr-only">Toggle navigation</span>
-		<span class="icon-bar"></span>
-		<span class="icon-bar"></span>
-		<span class="icon-bar"></span>
-	  </button>
-	
-    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">RRC @ IIIT Hyderabad</a>
-	</div>
-	<div class="collapse navbar-collapse" id="navbar-collapse-1">
-	  <ul class="nav navbar-nav navbar-right">
-		<li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/funding">Funding</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/eufunding">EU_Funding</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/uasat">UASAT</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/events">Events</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>
-		
-	  </ul>
-	</div>
-  </div>
-</div> -->
-
-
-<!-- <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-	<div class="container-fluid">
-	  <div class="navbar-header">
-		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
-		  <span class="sr-only">Toggle navigation</span>
-		  <span class="icon-bar"></span>
-		  <span class="icon-bar"></span>
-		  <span class="icon-bar"></span>
-		</button>
-  
-		<a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">RRC @ IIIT Hyderabad</a>
-	  </div>
-  
-	  <div class="collapse navbar-collapse" id="navbar-collapse-1">
-		<ul class="nav navbar-nav navbar-right">
-		  <li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
-		  <li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
-		  <li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
-		  
-		  <li class="dropdown">
-			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-			  Research <span class="caret"></span>
-			</a>
-			<ul class="dropdown-menu">
-			  <li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
-			  <li><a href="{{ site.url }}{{ site.baseurl }}/project_demos">Research Demos</a></li>
-			</ul>
-		  </li>
-		  
-		  <li><a href="{{ site.url }}{{ site.baseurl }}/funding">Funding</a></li>
-		  <li><a href="{{ site.url }}{{ site.baseurl }}/eufunding">EU_Funding</a></li>
-		  <li><a href="{{ site.url }}{{ site.baseurl }}/uasat">UASAT</a></li>
-		  <li><a href="{{ site.url }}{{ site.baseurl }}/events">Events</a></li>
-		  <li><a href="{{ site.url }}{{ site.baseurl }}/pictures">Gallery</a></li>
-		</ul>
-	  </div>
-	</div>
-</div>
-   -->
 
 
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -98,17 +29,22 @@
 		  <li><a href="{{ site.url }}{{ site.baseurl }}/funding">Funding</a></li>
 		  <li><a href="{{ site.url }}{{ site.baseurl }}/eufunding">EU_Funding</a></li>
 		  <!--li><a href="{{ site.url }}{{ site.baseurl }}/uasat">UASAT</a></li-->
-		  <!-- Events Dropdown -->
-		  <!-- Past Events Dropdown -->
 <!-- UASAT Main Dropdown -->
-<li class="dropdown">
-  <a href="{{ site.url }}{{ site.baseurl }}/uasat"
-     class="dropdown-toggle"
+<li class="dropdown uasat-dropdown">
+
+  <!-- Main clickable link -->
+  <a href="{{ site.url }}{{ site.baseurl }}/uasat" class="nav-link">
+    UASAT
+  </a>
+
+  <!-- Caret toggle -->
+  <a href="#"
+     class="dropdown-toggle nav-link"
      data-toggle="dropdown"
      role="button"
      aria-haspopup="true"
      aria-expanded="false">
-    UASAT <span class="caret"></span>
+    <span class="caret"></span>
   </a>
 
   <ul class="dropdown-menu">
@@ -121,7 +57,6 @@
 
       <ul class="dropdown-menu">
 
-        <!-- Master Trainer Program -->
         <li class="dropdown-submenu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             Master Trainer Program
@@ -134,7 +69,6 @@
           </ul>
         </li>
 
-        <!-- Workshops -->
         <li class="dropdown-submenu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             Workshops
