--- a/css/main.scss
+++ b/css/main.scss
@@ -128,6 +128,18 @@ img {
   margin: 0 auto;
   padding: 20px 18px;
 }
+/* UASAT split-link dropdown styling */
+.uasat-dropdown > a {
+  display: inline-block;
+}
+
+.uasat-dropdown > a.nav-link {
+  padding-right: 5px;
+}
+
+.uasat-dropdown > a.dropdown-toggle {
+  padding-left: 0;
+}
 
 /* ---------- Publications header / byline ---------- */
 p.byline {
