--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,25 +31,17 @@
 		  <!--li><a href="{{ site.url }}{{ site.baseurl }}/uasat">UASAT</a></li-->
 <!-- UASAT Main Dropdown -->
 <li class="dropdown uasat-dropdown">
-
-  <!-- Main clickable link -->
-  <a href="{{ site.url }}{{ site.baseurl }}/uasat" class="nav-link">
-    UASAT
-  </a>
-
-  <!-- Caret toggle -->
-  <a href="#"
-     class="dropdown-toggle nav-link"
+  <a href="{{ site.url }}{{ site.baseurl }}/uasat"
+     class="dropdown-toggle"
      data-toggle="dropdown"
      role="button"
      aria-haspopup="true"
      aria-expanded="false">
-    <span class="caret"></span>
+    UASAT <span class="caret"></span>
   </a>
 
   <ul class="dropdown-menu">
 
-    <!-- Past Events -->
     <li class="dropdown-submenu">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
         Past Events
@@ -92,6 +84,7 @@
 
   </ul>
 </li>
+
 
 		  <li><a href="{{ site.url }}{{ site.baseurl }}/Events">Events</a></li>
 		  <li><a href="{{ site.url }}{{ site.baseurl }}/gallery">Gallery</a></li>
