Implement dropdown link navigation on click
Add click event listener for dropdown navigation.

--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,18 @@
 })();
 </script>
 
+<script>
+document.addEventListener('click', function (e) {
+  const link = e.target.closest('.uasat-dropdown > a');
+  if (!link) return;
+
+  // If click is on caret, let Bootstrap open dropdown
+  if (e.target.classList.contains('caret')) return;
+
+  // Otherwise, follow the link
+  window.location.href = link.getAttribute('href');
+});
+</script>
 
 
 /* ---------- Bootstrap import (keep if your build uses it) ---------- */
