--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,14 +30,22 @@
 		  <li><a href="{{ site.url }}{{ site.baseurl }}/eufunding">EU_Funding</a></li>
 		  <!--li><a href="{{ site.url }}{{ site.baseurl }}/uasat">UASAT</a></li-->
 <!-- UASAT Main Dropdown -->
-<li class="dropdown uasat-dropdown">
-  <a href="{{ site.url }}{{ site.baseurl }}/uasat"
+<!-- UASAT page link -->
+<li>
+  <a href="{{ site.url }}{{ site.baseurl }}/uasat">
+    UASAT
+  </a>
+</li>
+
+<!-- UASAT dropdown -->
+<li class="dropdown">
+  <a href="#"
      class="dropdown-toggle"
      data-toggle="dropdown"
      role="button"
      aria-haspopup="true"
      aria-expanded="false">
-    UASAT <span class="caret"></span>
+    <span class="caret"></span>
   </a>
 
   <ul class="dropdown-menu">
@@ -86,6 +94,7 @@
 </li>
 
 
+
 		  <li><a href="{{ site.url }}{{ site.baseurl }}/Events">Events</a></li>
 		  <li><a href="{{ site.url }}{{ site.baseurl }}/gallery">Gallery</a></li>
 		</ul>
@@ -106,6 +115,8 @@
   .dropdown-submenu:hover > .dropdown-menu {
 	  display: block;
   }
+
+
   .dropdown-submenu > a:after {
 	  display: block;
 	  content: " ";
@@ -158,6 +169,14 @@
 .navbar .container-fluid {
   padding-left: 0;
   padding-right: 0;
+}
+/* Visually group UASAT + caret */
+.navbar-nav > li + li.dropdown > a {
+  padding-left: 0;
+}
+
+.navbar-nav > li > a + .caret {
+  margin-left: -8px;
 }
 
 /* === Dropdowns === */
