--- a/_includes/header.html
+++ b/_includes/header.html
@@ -75,14 +75,10 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a href="{{ site.url }}{{ site.baseurl }}/events/workshops/National_Workshop_Systems_and_Intelligence_for_UAV_2023">
-                National Workshop on Systems and Intelligence for UAV (Nov 2023)
-              </a>
+              <a href="{{ site.url }}{{ site.baseurl }}/events/workshops/National_Workshop_Systems_and_Intelligence_for_UAV_2023">National Workshop on Systems and Intelligence for UAV</a>
             </li>
             <li>
-              <a href="{{ site.url }}{{ site.baseurl }}/events/workshops/Second_Workshop_on_Systems_and_Intelligence_for_UAV">
-                Second Workshop on Systems and Intelligence for UAV (Dec 2024)
-              </a>
+              <a href="{{ site.url }}{{ site.baseurl }}/events/workshops/Second_Workshop_on_Systems_and_Intelligence_for_UAV">Second Workshop on Systems and Intelligence for UAV</a>
             </li>
           </ul>
         </li>
